fix: remove .applyStyle code and fix layout distortions due to display property

--- a/src/components/common/Questionnaire/CollapsedDrawer/CollapsedDrawer.module.css
+++ b/src/components/common/Questionnaire/CollapsedDrawer/CollapsedDrawer.module.css
@@ -5,10 +5,6 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 9;
-  display: none;
-}
-
-.applyStyle {
   right: 0;
   display: flex;
 }
